# cppcon2016

./: .gitignore  LICENSE  README.md  test.py
pythoncpp/: CMakeLists.txt  conanfile.txt
pythoncpp/boost/: CMakeLists.txt  boost1.cpp  boost_math.cpp  converter.h
pythoncpp/capi/: example.py  mymath.c  mymath.pyd  setup.py
pythoncpp/pybind/: CMakeLists.txt  pybind1.cpp  pybind11_math.cpp
